[tool.poetry]
name = "pole"
version = "0.1.0"
description = ""
authors = ["Ratatinator97 <asidiras.csi@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.7"
keras = "^2.3.1"
collections-extended = "^1.0.3"
gym = "^0.17.1"
tensorflow-cpu = "^2.1.0"
tensorflow-estimator = "^2.1.0"
tensorflow = "^2.1.0"
box2d = "^2.3.10"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
